# Machine_Learning_Olist

./: README.md  análisis_sentimiento.ipynb  estimacion_tiempos_entrega.ipynb  main.ipynb  prediccion_desercion_cliente.ipynb  pyproject.toml  recomendacion_productos.ipynb
