[project]
name = "the-hatch-ch2"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Mujica",email = "sebas13mujica@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas ==2.2.2",
    "numpy ==1.26.4",
    "seaborn ==0.13.2",
    "scikit-learn ==1.4.2",
    "matplotlib (>=3.10.7,<4.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "spacy (>=3.8.8,<4.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.0.1"

